fix modal on mobile view

--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -104,7 +104,7 @@
     max-width: 310px;
     background: linear-gradient(0deg, #6600FF, #6600FF),
         radial-gradient(58.43% 67.71% at 50% 59.38%, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 100%);
-    border-top: 1px solid #FFFFFF30;
+    /* border-top: 1px solid #FFFFFF30; */
     box-shadow:
         0px 3px 6px 0px #0000001A,
         0px 11px 11px 0px #00000017,
