--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -55,6 +55,9 @@ input {
     text-transform: capitalize;
     width: 100%;
     height: 35px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #32323C;
 }
 
 input:focus {
