--- a/src/components/WaitListForm/WaitListForm.module.css
+++ b/src/components/WaitListForm/WaitListForm.module.css
@@ -1,13 +1,17 @@
 .container {
     background: url("../../assets/waitlist-bg.svg") no-repeat center center;
     background-size: cover;
-    background-attachment: fixed; /* Ensures the background stays in place */
-    background-position: center top; /* Adjusts positioning */
+    background-attachment: fixed;
+    /* Ensures the background stays in place */
+    background-position: center top;
+    /* Adjusts positioning */
     height: 100vh;
     width: 100%;
     position: relative;
-    display: flex; /* Helps in layout adjustment */
-    align-items: center; /* Centers content */
+    display: flex;
+    /* Helps in layout adjustment */
+    align-items: center;
+    /* Centers content */
     justify-content: center;
 }
 
@@ -17,7 +21,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: rgba(10, 10, 15, 0.7);
     /* Dark overlay */
     backdrop-filter: blur(8px);
@@ -28,87 +32,37 @@
 .formWrapper {
     position: relative;
     z-index: 2;
-    /* Above overlay */
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    /* width: 100%; */
- 
-    /* height: 100vh; */
 }
 
-.form {
-    margin: 40px auto;
-    background: white;
-    border-radius: 32px;
+.containerForm {
     width: 100%;
     max-width: 545px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-inline: 32px;
-    padding-bottom: 24px;
-    max-height: 545px;
-    height: 100%;
-    overflow-y: hidden;
+    max-height: 582px;
+    overflow: auto;
+    border-radius: 32px;
+    /* Hide scrollbar for Webkit browsers (Chrome, Safari) */
+    scrollbar-width: none;
+    /* Firefox */
+    -ms-overflow-style: none;
 }
 
-.buttonContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.containerForm::-webkit-scrollbar {
+    display: none;
 }
 
-.button {
-    background-color: #6600FF;
-    color: white;
-    border: none;
-    padding: 8px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    border-radius: 22px;
-    width: 100%;
-    /* max-width: 481px; */
-    height: 52px;
-}
-
-.formInput {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.nameFeild {
-    display: flex;
-    /* justify-content: space-between; */
-    align-items: center;
-    gap: 20px;
-}
-
-.checkboxFeild{
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    padding-block: 16px;
-}
-
-@media (max-width: 450px) {
-    .container{
-        height: 100%;
+@media (max-width: 1000px) {
+    .containerForm {
+        max-height: 480px;
+        max-width: 525px;
     }
-    .formWrapper{
-        background: #ffffff;
-    }
-    .form {
-        margin: 0;
-        border-radius: 0px;
-        padding-block:16px 300px;
-        padding-inline: 16px;
-        width: 100%; 
-        height: 100%; 
-    }
-    .buttonContainer{
-        margin-top: 16px;
+}
+
+@media (max-width: 850px) {
+    .containerForm {
+        max-height: 400px;
+        border-radius: 20px;
+        padding-block: 0;
+        padding-bottom: 50px;
+        max-width: 505px;
     }
 }
